# ChangeLog for app-laptop/tlp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*old ebuilds removed (15 Jul 2012)
	15 Jul 2012; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r2.ebuild, tlp-0.3.4-r1.ebuild :

	old ebuilds removed

*tlp-0.3.6-r1 (31 Mar 2012)
	31 Mar 2012; Andre Erdmann <dywi@mailerd.de> tlp-0.3.6-r0.ebuild, tlp-0.3.6-1.ebuild :

	TLP 0.3.6-r1: fix init script, remove 0.3.6-r0

*tlp-0.3.6 (30 Mar 2012)
	31 Mar 2012; Andre Erdmann <dywi@mailerd.de> tlp-0.3.6-r0.ebuild, metadata.xml :

	TLP 0.3.6: acpi-hook USE-flag removed, rdw (Radio Device Wizard) USE-flag added

*old ebuilds removed (30 Mar 2012)
	31 Mar 2012; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r0.ebuild, tlp-0.3.3-r1.ebuild, tlp-0.3.4-r0.ebuild :

	old ebuilds removed

*repoman "IUSE.undefined" (30 Mar 2012)
	31 Mar 2012; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r2.ebuild, tlp-0.3.4-r1.ebuild :

	added IUSE="", won't use the old eclass 'tlp' in future

*tlp-0.3.3-r2 (18 Nov 2011)
	18 Nov 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r2.ebuild :

	0.3.4 fixes (lsb-release, tlp-stat) for the 0.3.3 series.

*tlp-0.3.4-r1 (16 Nov 2011)
	16 Nov 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.4-r0.ebuild, metadata.xml :

	Using new tlp eclass, tarballs are bzipped now.

	Added optional sys-apps/lsb-release dependency for tlp-stat.

	fixed typo tlp-functions::check_lmt() introduced by gentoo patch

*tlp-0.3.2-r? (16 Nov 2011)
	11 Nov 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.2-r?.ebuild :

	Removed all tlp-0.3.2 ebuilds.

*tlp-0.3.4-r0 (06 Oct 2011)
	06 Oct 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.4-r0.ebuild :

	tlp-0.3.4

*tlp-0.3.3-r1 (23 Sep 2011)
	23 Sep 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r1.ebuild :

	use standard/upstream zztlp script

*tlp-0.3.3-r0 (23 Sep 2011)
	23 Sep 2011; Andre Erdmann <dywi@mailerd.de> tlp-0.3.3-r0.ebuild :

	tlp-0.3.3

*tlp-0.3.2-r3 (27 Jul 2011)
