@@ -1,4 +1,6 @@
 DIST tlp-0.3.6-r1-gentoo.tar.bz2 28314 RMD160 2e7ed42184dd79c2c503abd4e9ad78d7f03c7d3f SHA1 11c4ac6c59798b2fd0c2d8d73483d5776e976b8c SHA256 9996a42701d439474e89b9ef7b1d3714a8d876a1a287f14b23bf0d42efcff88e
+DIST tlp-0.3.6.900-r0-gentoo.tar.bz2 32146 RMD160 7b8bcbb9a933b3c27c9e4abe047422c7e53f1028 SHA1 fd7cdc8ca40716ce2ccf5b9e5ab53e306f4c2679 SHA256 0a94d520fcc708f14cb670018305828611f17c9ac33a6b65fd500f3c8ea56b34
 EBUILD tlp-0.3.6-r1.ebuild 3995 RMD160 9198f5d729453e1872c3a46999b9c0f3c341d31d SHA1 223d534bfe30bd656ee038660b9748d912ef0a6b SHA256 ec43b6d639161e1e58fd92e8cff491f7f6735b798e97605bbe6942803d12f7d0
-MISC ChangeLog 2671 RMD160 bb9ff4b2b458d44431eeed1a9d0591d90a2cc2fd SHA1 0e20251eb9a028657944a16a5f9353fea8c277df SHA256 642efedacfb8bfae1186d2767ab2cf3dc0b4706744aaf58336409db76c46e694
+EBUILD tlp-0.3.6.900.ebuild 3953 RMD160 3817ea7c58019a6a46bc560ea66106e9a94ec4a3 SHA1 3edd278c58de2887883741d96e57fb635aed1ab7 SHA256 ffaa2c80ef08fc93d513cf994f3870ebb6f28d35367a4ef73d728e98b26a248e
+MISC ChangeLog 2885 RMD160 0e8103ea43897dcdee696d836d6ac451c3ec0010 SHA1 1e7520d0b6908f0ce7b127044f303ccfdf325a34 SHA256 aaeb09517bc61f1bb27ac80e55c6677888e25344a042d216f7698435de951312
 MISC metadata.xml 1689 RMD160 ec3ec2406e097801fb958d500125c11a5abf6e54 SHA1 e83271fb60031c483776830ac4e92ce381113466 SHA256 385091a65fb49e66d6ef886a7cac649d6e9d225f0f0310eb1fdb963fc4a165a4
