@@ -1,1 +1,3 @@
-
+# André Erdmann <dywi@mailerd.de> (22 Jul 2012)
+# Masked devel version for testing
+=app-laptop/tlp-0.3.6.900
